--- a/app/src/main/resources/config/application-prod.yml
+++ b/app/src/main/resources/config/application-prod.yml
@@ -17,3 +17,7 @@ spring:
 #    username: ""
 #    password: ""
 #    url: "jdbc:h2:./taskDB"s
+
+#springdoc:
+#  swagger-ui:
+#    path: "swagger-ui1.html"
